--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,9 +40,9 @@ test:
   services:
     - mongo:latest
     volumes: $CI_PROJECT_DIR/data:/data/db
-  cache:
-    paths:
-      - /cache/mongo-data  
+  # cache:
+  #   paths:
+  #     - /cache/mongo-data  
   variables:
     MONGO_INITDB_DATABASE: testdb
     MONGODB_URI: mongodb://mongo:27017/testdb
