--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,10 +39,10 @@ test:
   stage: test
   services:
     - mongo:latest
-  volumes: $CI_PROJECT_DIR/data:/data/db
-  # cache:
-  #   paths:
-  #     - /cache/mongo-data  
+  # volumes: $CI_PROJECT_DIR/data:/data/db
+  cache:
+    paths:
+      - /data  
   variables:
     MONGO_INITDB_DATABASE: testdb
     MONGODB_URI: mongodb://mongo:27017/testdb
