debug connexion service mongodb gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,7 +40,9 @@ test:
   services:
     - name: mongo:4.4
       alias: mongodb
-  # volumes: $CI_PROJECT_DIR/data:/data/db
+      command: ["mongod", "--dbpath", "/data/db"]
+      volumes:
+        - $CI_PROJECT_DIR/data:/data/db
   cache:
     key: $CI_COMMIT_REF_SLUG
     paths:
@@ -52,7 +54,7 @@ test:
     GIT_CLEAN_FLAGS: -ffdx -e data/ -e app_admin/scripts/.ipynb_checkpoints/ -e app_admin/__pycache__/ -e app_admin/scripts/__pycache__/ -e app/__pycache__/ -e app_dash/__pycache__/ -e app_form/__pycache__/ -e app_form/scripts/__pycache__/ -e functions/__pycache__ -e model/__pycache__
   script:
     - sudo chmod -R 777 data
-    - mongosh MONGODB_URI
+    - mongosh $MONGODB_URI
 
 test-app:
   stage: test
