--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,6 +37,8 @@ stages:
 
 test:
   stage: test
+  tags:
+    - docker-runner
   services:
     - name: mongo:4.4
       alias: mongodb
@@ -54,7 +56,7 @@ test:
     GIT_CLEAN_FLAGS: -ffdx -e data/ -e app_admin/scripts/.ipynb_checkpoints/ -e app_admin/__pycache__/ -e app_admin/scripts/__pycache__/ -e app/__pycache__/ -e app_dash/__pycache__/ -e app_form/__pycache__/ -e app_form/scripts/__pycache__/ -e functions/__pycache__ -e model/__pycache__
   script:
     - sudo chmod -R 777 data
-    - mongod $MONGODB_URI
+    - mongosh $MONGODB_URI
     - nc -zv mongodb 27017
 
 test-app:
