--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -38,7 +38,7 @@ stages:
 test:
   stage: test
   tags:
-    - test-mongo
+    - test-runner-mongo
   services:
     - name: mongo:4.4
       alias: mongodb
