debug connexion service mongodb gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,9 +51,10 @@ test:
   #     - /data  
   variables:
     MONGO_INITDB_DATABASE: testdb
-    MONGODB_URI: mongodb://127.0.0.1:27017/testdb
-    MONGO_INITDB_ROOT_USERNAME: root
-    MONGO_INITDB_ROOT_PASSWORD: password
+    MONGODB_URI: mongodb://127.0.0.1:27017/app_data
+    MONGO_INITDB_ROOT_USERNAME: dstairlines
+    MONGO_INITDB_ROOT_PASSWORD: dstairlines
+    MONGO_INITDB_DATABASE: app_data
     # GIT_STRATEGY: fetch
     # GIT_CLEAN_FLAGS: -ffdx -e data/ -e app_admin/scripts/.ipynb_checkpoints/ -e app_admin/__pycache__/ -e app_admin/scripts/__pycache__/ -e app/__pycache__/ -e app_dash/__pycache__/ -e app_form/__pycache__/ -e app_form/scripts/__pycache__/ -e functions/__pycache__ -e model/__pycache__
   script:
