debug connexion service mongodb gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -41,11 +41,11 @@ test:
     - test-mongo
   services:
     - name: mongo:4.4
-      alias: mongodb
   variables:
-    MONGO_INITDB_ROOT_USERNAME: root
-    MONGO_INITDB_ROOT_PASSWORD: root
-    MONGO_INITDB_DATABASE: app_data
+    # MONGO_INITDB_ROOT_USERNAME: root
+    # MONGO_INITDB_ROOT_PASSWORD: root
+    # MONGO_INITDB_DATABASE: app_data
+    MONGO_URI: mongodb://mongo:27017/app_data
   script:
     - pwd
     - python3 init_db2.py
