--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -53,6 +53,14 @@ test:
     - pwd
     - ping -c 4 mongodb
     - python3 init_db2.py
+    - echo "Listing network interfaces:"
+    - ip addr
+    - echo "Checking DNS configuration:"
+    - cat /etc/resolv.conf
+    - echo "Listing hosts:"
+    - cat /etc/hosts
+    - ping -c 4 mongo
+    - python3 init_db2.py
     # - sudo chmod -R 777 data
     # - mongosh $MONGODB_URI
     # - nc -zv mongodb 27017
