--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,8 +47,8 @@ test:
     # MONGO_INITDB_ROOT_PASSWORD: root
     # MONGO_INITDB_DATABASE: app_data
     MONGO_URI: mongodb://mongodb:27017/app_data?authSource=admin
-    CI_DEBUG_TRACE: "true"
-    GIT_DEPTH: 1
+    # CI_DEBUG_TRACE: "true"
+    # GIT_DEPTH: 1
   script:
     - pwd
     - ping -c 4 mongodb
