--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,6 +49,7 @@ test:
     MONGO_URI: mongodb://mongodb:27017/app_data?authSource=admin
     # CI_DEBUG_TRACE: "true"
     # GIT_DEPTH: 1
+  extends: .do_strategy
   script:
     - pwd
     - python3 init_db2.py
