--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -43,7 +43,7 @@ test:
     - name: mongo:4.4
       alias: mongodb
   variables:
-    DOCKER_NETWORK_MODE: "bridge"
+    DOCKER_NETWORK_MODE: "host"
     # MONGO_INITDB_ROOT_USERNAME: root
     # MONGO_INITDB_ROOT_PASSWORD: root
     # MONGO_INITDB_DATABASE: app_data
@@ -52,6 +52,8 @@ test:
     # GIT_DEPTH: 1
   extends: .do_strategy
   script:
+    - MONGO_IP=$(getent hosts mongodb | awk '{ print $1 }')
+    - echo "MongoDB IP= $MONGO_IP"
     - pwd
     - echo "Listing network interfaces:"
     - ip addr
