--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,11 +48,8 @@ test:
     # MONGO_INITDB_ROOT_PASSWORD: root
     # MONGO_INITDB_DATABASE: app_data
     MONGO_URI: mongodb://mongodb:27017/app_data?authSource=admin
-    # CI_DEBUG_TRACE: "true"
-    # GIT_DEPTH: 1
   script:
-    # - MONGO_IP=$(getent hosts mongodb | awk '{ print $1 }')
-    # - echo "MongoDB IP= $MONGO_IP"
+    - set -x
     - pwd
     - echo "Listing network interfaces:"
     - ip addr
