debug connexion service mongodb gitlab

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,9 +47,9 @@ test:
     # MONGO_INITDB_ROOT_USERNAME: root
     # MONGO_INITDB_ROOT_PASSWORD: root
     # MONGO_INITDB_DATABASE: app_data
-    MONGO_URI: mongodb://mongo:27017/app_data?authSource=admin
+    # MONGO_URI: mongodb://mongo:27017/app_data?authSource=admin
   script:
-    - sh ls
+    - pwd
     # - echo "Listing network interfaces"
     # - ip addr
     # - echo "Checking DNS configuration"
