--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -55,8 +55,8 @@ test:
     - cat /etc/resolv.conf
     - echo "Listing hosts"
     - cat /etc/hosts
-    - sudo pip install --upgrade pip
-    - sudo apt-get update
+    - pip install --upgrade pip
+    - apt-get update
     - pip install -r app/requirements.txt
     - python3 init_db2.py
 
