--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,11 +77,9 @@ test-app:
     # MONGO_HOST: IP_VM
     # MONGO_PORT: 27017
     # MONGO_INITDB_DATABASE: test_db
-    # MONGO_INITDB_ROOT_USERNAME: root
-    # MONGO_INITDB_ROOT_PASSWORD: password
-    MONGO_ROOT_LOGIN: root
-    MONGO_ROOT_PASSWORD: password
-    MONGO_URI: mongodb://root:password@mongodb:27017/app_data?authSource=admin
+    MONGO_INITDB_ROOT_USERNAME: root
+    MONGO_INITDB_ROOT_PASSWORD: root
+    MONGO_URI: mongodb://root:root@mongodb:27017/app_data?authSource=admin
     FLASK_ADMIN_LOGIN: admin
     FLASK_ADMIN_PASSWORD: admin
     FLASK_USER_LOGIN: dstairlines
