--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -6,7 +6,7 @@ joblib==1.4.2                  # Outil de sérialisation pour les modèles de ma
 pandas==2.0.3                  # Bibliothèque pour la manipulation des données en format DataFrame (utilisée pour le traitement des données)
 requests==2.32.3               # Pour faire des requêtes HTTP, utilisée dans l'API pour communiquer avec des services externes
 numpy==1.23.0                  # Bibliothèque de calcul numérique, utilisée pour la gestion des tableaux et matrices de données
-# scikit-learn==1.5.2            # Bibliothèque pour le machine learning (utilisée pour l'entraînement et la prédiction des modèles)
+scikit-learn==1.3.2            # Bibliothèque pour le machine learning (utilisée pour l'entraînement et la prédiction des modèles)
 # flask-session==0.4.0
 # flask-cors==3.1.1  # Si nécessaire
 
