--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -279,7 +279,7 @@ deploy-dev:
       http://$IP_VM:$PORT_DEV_APP_DASH
     on_stop: stop-dev
   script:
-    - sudo chmod -R 755 data
+    # - sudo chmod -R 755 data
     # - sudo chown -R gitlab-runner:gitlab-runner .
     - ls -lR
     - pwd
