--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,7 +84,7 @@ test-app:
   stage: test
   rules:
     - changes:
-        - gitlab-ci.yml
+        - .gitlab-ci.yml
         - app/*
         - data_test/*
         - model/*
@@ -119,7 +119,7 @@ test-app_admin:
   stage: test
   rules:
     - changes:
-        - gitlab-ci.yml
+        - .gitlab-ci.yml
         - app_admin/*
         - data_test/*
         - model/*
@@ -135,7 +135,7 @@ test-app_form:
   stage: test
   rules:
     - changes:
-        - gitlab-ci.yml
+        - .gitlab-ci.yml
         - app_form/*
         - data_test/*
         - functions/*
@@ -149,6 +149,7 @@ test-app_form:
 .do_dind:
   services:
     - docker:dind
+      privileged: true
 
 .do_docker_logging:
   before_script:
@@ -165,7 +166,7 @@ build-app:
   image: docker:latest
   rules:
     - changes:
-        - gitlab-ci.yml
+        - .gitlab-ci.yml
         - app/*
   extends: 
     - .do_dind
@@ -183,7 +184,7 @@ build-app_admin:
   image: docker:latest
   rules:
     - changes:
-        - gitlab-ci.yml
+        - .gitlab-ci.yml
         - app_admin/*
   extends: 
     - .do_dind
@@ -201,7 +202,7 @@ build-app_dash:
   image: docker:latest
   rules:
     - changes:
-        - gitlab-ci.yml
+        - .gitlab-ci.yml
         - app_dash/*
   extends: 
     - .do_dind
@@ -219,7 +220,7 @@ build-app_form:
   image: docker:latest
   rules:
     - changes:
-        - gitlab-ci.yml
+        - .gitlab-ci.yml
         - app_form/*
   extends: 
     - .do_dind
@@ -252,7 +253,6 @@ stop-dev:
 
 deploy-dev:
   stage: deploy-dev
-  privileged: true
   tags:
     - deploy-volume
   # timeout: 2h 
@@ -299,7 +299,6 @@ deploy-dev:
 
 deploy-prod:
   stage: deploy-prod
-  privileged: true
   tags:
     - deploy-volume
   # timeout: 2h 
